fix some layout issues

--- a/src/assets/css/FriendPicker.css
+++ b/src/assets/css/FriendPicker.css
@@ -49,7 +49,7 @@
 .fpcategoryBox {
 	cornerRadius:0px;
 	borderColor:#B4B5B5;
-	right:30px;
+	right:15px;
 	verticalCenter:0px;
 }
 
